auth cleanup
