# backend/src/main/java/com/kfdlabs/asap/controller/AuthController.java
@@ -6,10 +6,7 @@ import com.kfdlabs.asap.service.AuthService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.UUID;
 
@@ -50,5 +47,10 @@ public class AuthController implements AuthApi {
     @Override
     public ResponseEntity<ResetPasswordMultiResponse> resetPassword(ResetPasswordRequest resetPasswordRequest) {
         return ResponseEntity.ok(authService.resetPassword(resetPasswordRequest));
+    }
+
+    @Override
+    public ResponseEntity<AuthResponse> exchangeOAuthCode(String code) {
+        return ResponseEntity.ok(authService.exchangeOAuthCode(code));
     }
 }
